# pseudo-switch

./: Cargo.toml  README.md
src/: device_listing.rs  device_monitoring.rs  identify_routine.rs  main.rs  run_routine.rs  simulate_once_routine.rs  simulate_switch_routine.rs  synthetic_switch.rs  systemd_utils.rs
