
[package]
name = "pseudo-switch"
version = "1.0.0"
authors = ["Owen Healy <owen@owenehealy.com.com>"]
edition = "2021"

[dependencies]
nix = "0.19.0"
libc = "0.2.80"
uinput-sys = "0.1.7"
num-traits = "0.2"
num-derive = "0.3"
clap = { version = "4.5.21", features = ["derive"] }
lazy_static = "1.4.0"
ioctls = "0.6.1"
mio = { version = "0.7.7", features = ["os-ext"] }
inotify = "0.10.0"
enum-display-derive = "0.1.1"
wildmatch = "2.1.1"
tabled = "0.17.0"

