
[package]
name = "pseudo-switch"
version = "1.0.0"
authors = ["Owen Healy <owen@owenehealy.com.com>"]
edition = "2021"

[dependencies]
nix = "0.19.0"
libc = "0.2.80"
uinput-sys = "0.1.7"
clap = { version = "4.5.21", features = ["derive"] }
inotify = "0.11.0"
tabled = { version = "0.17.0", features = ["ansi"] }
crossterm = "0.25"
path-absolutize = "3.1.1"

